# PyLEPR

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: .~lock.upload_validation.xlsx#  fO2.html  methods.html  pylepr_phases.html  units.html  upload_validation.xlsx  ~$upload_validation.xlsx
notebooks/: phase_scrape.ipynb  test_upload_validation.ipynb  test_upload_validation_colab.ipynb  test_upload_validation_colab_new.ipynb  test_upload_validation_local.ipynb  test_upload_validation_local.py
src/pylepr/: __init__.py  validate.py
templates/: Experimental_Analyses_Template.xlsx
