[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylepr"
version = "0.0.1"
authors = [
  { name="Aaron S. Wolf", email="aswolf@umich.edu" },
]
description = "A validation package for LEPR"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/earthchem/PyLEPR"